--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -39,7 +39,7 @@
 \familyname{Su}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~18665875205}                         % 可选项、如不需要可删除本行
+\mobile{+86~***********}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -64,9 +64,9 @@
 \maketitle
 
 \section{Educational Background}
-\cventry{2007.9-10.7}{Master}{Institute of Metal Research, Chinese Academy of Sciences}{ShenYang} {Chemical Physics} {} % {\textit{成绩}}{说明}  % 第3到第6编码可留白
+\cventry{2007.8-10.7}{Master}{Institute of Metal Research, Chinese Academy of Sciences}{ShenYang} {Chemical Physics} {} % {\textit{成绩}}{说明}  % 第3到第6编码可留白
 \vspace{5mm}
-\cventry{2003.9-07.7}{Bachelor}{YanTai university}{YanTai} {Applied Physics} {} % {\textit{成绩}}{说明}
+\cventry{2003.8-07.7}{Bachelor}{YanTai university}{YanTai} {Applied Physics} {} % {\textit{成绩}}{说明}
 
 %\section{毕业论文}
 %\cvitem{题目}{\emph{题目}}
@@ -74,7 +74,7 @@
 %\cvitem{说明}{\small 论文简介}
 
 \section{Working Experience}
-\cventry{2017.11-now}{Software Engineer}{Ringcentral Co., Ltd.}{XiaMen}{}{%
+\cventry{2017.11-now}{Ringcentral Co., Ltd.}{mobile department}{XiaMen}{}{%
 }
 \cvitem{Position}{%
 \begin{itemize}
@@ -89,7 +89,7 @@
 \end{itemize}
 }
 
-\cventry{2016.8-17.11}{Software Engineer}{Intel Co., Ltd. \& Mcafee Co., Ltd.}{ShenZhen}{}{%
+\cventry{2016.8-17.11}{Intel Co., Ltd. \& Mcafee Co., Ltd.}{Mobile Security department}{ShenZhen}{}{%
 }
 \cvitem{Position}{%
 \begin{itemize}
@@ -109,7 +109,7 @@
 \end{itemize}
 }
 
-\cventry{2014.4-16.4}{Software Engineer}{Iboxpay Co., Ltd.}{ShenZhen}{}{%
+\cventry{2014.4-16.4}{Iboxpay Co., Ltd.}{Software department}{ShenZhen}{}{%
 }
 \cvitem{Position}{%
 \begin{itemize}
@@ -124,7 +124,7 @@
 }
 
 
-\cventry{2010.4-14.4}{Software Engineer}{Topwise Co., Ltd.}{ShenZhen}{}{%
+\cventry{2010.4-14.4}{Topwise Co., Ltd.}{Software department}{ShenZhen}{}{%
 }
 \cvitem{Position}{%
 \begin{itemize}
@@ -163,8 +163,7 @@
   \item I look forward to taking more challenges that can push me to the fulfillment of my ambitions to be a productive engineer.
   \item I look forward to serving a group that has the value of work-life balance.
   \item I look forward to participating in a pioneering and growing project instead of a blank and mature one.
-  \item I look forward to working with engineers better than me.
-  \item I look forward to working for engineers better than me.
+  \item I look forward to working with talent engineers.
 \end{itemize}
 }
 
