--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -43,7 +43,7 @@
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
-\homepage{zpcat.blogspot.com}                  % 可选项、如不需要可删除本行
+\homepage{medium.com/@zpcat}                  % 可选项、如不需要可删除本行
 %\extrainfo{附加信息 (可选项)}                  % 可选项、如不需要可删除本行
 \photo[64pt][0.4pt]{myself-new}                  % ‘64pt’是图片必须压缩至的高度、‘0.4pt‘是图片边框的宽度 (如不需要可调节至0pt)、’picture‘ 是图片文件的名字;可选项、如不需要可删除本行
 %\quote{引言(可选项)}                           % 可选项、如不需要可删除本行
@@ -74,108 +74,209 @@
 
 \section{工作背景}
 %\subsection{专业}
-\cventry{2014.4-16.4}{软件工程师}{深圳盒子支付有限公司}{}{}{%
+\cventry{2017.11-now}{厦门铃盛软件}{移动开发部}{厦门}{}{%
 }
-\cvitem{职责:}{%
+\cvitem{职位}{%
 \begin{itemize}
-\item {\small \emph {android app 工程师}}
-\item {\small \emph {android app 架构}}
+\item {\small \emph {安卓软件工程师}}
 \end{itemize}
 }
-\cventry{2013.9-14.4}{软件工程师}{深圳鼎智时代通讯技术有限公司}{}{}{}
-\cvitem{职责:}{%
+\vspace{-4.5mm}
+\cvitem{职责}{%
 \begin{itemize}
-\item {\small \emph {蓝牙BLE工程师}}
+\item {\small \emph {WebRTC安卓客户端开发}}
+\item {\small \emph {视频会议系统开发}}
+\end{itemize}
+}
+
+\cventry{2016.8-17.11}{英特尔(Intel) \& 迈克菲(McAfee)}{手机安全部}{深圳}{}{%
+}
+\cvitem{职位}{%
+\begin{itemize}
+\item {\small \emph {安卓软件工程师}}
+\end{itemize}
+}
+\vspace{-4.5mm}
+\cvitem{职责}{%
+\begin{itemize}
+\item {\small \emph {迈克菲手机杀毒软件开发}}
+\end{itemize}
+}
+\vspace{-4.5mm}
+\cvitem{说明}{%
+\begin{itemize}
+\item {\small \emph {McAfee在2017年4月从Intel手机安全部门独立成为Intel持股的独立公司, 这两家公司的工作是连续的。}}
+\end{itemize}
+}
+
+\cventry{2014.4-16.4}{深圳盒子支付}{研发部}{深圳}{}{%
+}
+\cvitem{职位}{%
+\begin{itemize}
+\item {\small \emph {安卓软件工程师}}
+\end{itemize}
+}
+\vspace{-4.5mm}
+\cvitem{职责}{%
+\begin{itemize}
+\item {\small \emph {移动POS机安卓端开发}}
+\item {\small \emph {软件架构部门技术调研}}
+\end{itemize}
+}
+
+
+\cventry{2010.4-14.4}{深圳鼎智通讯技术有限公司}{智能手机部门}{深圳}{}{%
+}
+\cvitem{职位}{%
+\begin{itemize}
 \item {\small \emph {安卓系统工程师}}
 \end{itemize}
 }
-\cventry{2012.2-12.8}{软件工程师}{深圳鼎智通讯有限公司}{}{}{%
+\vspace{-4.5mm}
+\cvitem{部门}{%
+\begin{itemize}
+\item {\small {2010.4 - 2012.1}, \small \emph {深圳鼎智时代}}
+\item {\small {2012.2 - 2012.8}, \small \emph {深圳鼎智通讯}}
+\item {\small {2012.8 - 2013.8}, \emph {离职}}  
+\item {\small {2013.9 - 2014.4}, \small \emph {深圳鼎智时代}}
+\end{itemize}
 }
-\cvitem{职责:}{%
+\vspace{-4.5mm}
+\cvitem{职责}{%
 \begin{itemize}
-\item {\small \emph {安卓系统开发}}
-\end{itemize}}
-\cventry{2010.4-12.1}{软件工程师}{深圳鼎智时代通讯技术有限公司}{}{}{}
-\cvitem{职责:}{%
-\begin{itemize}
-\item {\small \emph {Android系统开发}}
-\end{itemize}} %\newline{}
-
-% 工作内容:
-% \begin{itemize}
-% \item android编译环境开发与维护;
-% \item WIFI子系统维护;
-% \item Bluetooth子系统维护;
-% \item 传感器子系统开发;
-% \item 客户定制系统的开发工作;
-% \item 工厂测试和自动测试软件开发;
-% \item android app 开发;
-% \item Bluetooth BLE 协议开发
-% \end{itemize}
+\item {\small \emph {安卓HAL硬件适配层开发维护}}
+\item {\small \emph {Marvell, 展讯, 高通, 全志平台开发维护}}
+\end{itemize}
+}
 
 
-%\cventry{年 -- 年}{职位}{公司}{城市}{}{说明行1\newline{}说明行2}
-%\subsection{其他}
-%\cventry{年 -- 年}{职位}{公司}{城市}{}{说明}
-
-%\section{语言技能}
-%\cvitemwithcomment{英语}{四级}{}
-%\cvitemwithcomment{语言 3}{水平}{评价}
-
-\section{计算机技能}
+\section{软件技能}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
-\cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
-\cvitem{Languages}{\small C, Emacs Lisp, Python, Java, Javascript, Shell, \LaTeX{}}
-\cvitem{Operation System} {Linux(expert), Mac OS X(Daily usage)}
-\cvitem{Editor}{Emacs}
+\cvitem{blog}{\small \href{https://medium.com/@zpcat}{\color{blue}{https://medium.com/@zpcat}}}
+\cvitem{Languages}{\small Kotlin, Java, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
+\cvitem{OS} {Android, Linux, Mac OS X}
+\cvitem{Editor}{Emacs, Android Studio, VS Code}
 
-%\cvitem{Networking programming} {Twisted, node.js}
-%\cvitem{DataBase programming} {}
-
-\section{开源代码}
-\cvitem{\href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light-BLE}}}{\small BLE - Bluetooth Low Energy Device debug tool for Android.}
-\cvitem{\href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig-android}}}{\small jbig single-color space picture codec for Android.}
-%\cvitem{\href{https://github.com/suzp1984/TLSDemo}{\color{blue}{TLSDemo}}}{\small TLSDemo is an android app sample, which illustrate how to do https request both in self-signed certificate and two-way SSL client-side verfication.}
-%\cvitem{\href{https://github.com/suzp1984/tts-mode}{\color{blue}{TTS-mode}}}{\small TTS(Text to speech) mode for emacs.}
-%\cvitem{\href{https://github.com/suzp1984/fs-mode}{\color{blue}{fs-mode}}}{\small Linux file system management mode for emacs.}
-%\cvitem{\href{https://github.com/suzp1984/pulseaudio-mode}{\color{blue}{pulseaudio-mode}}}{\small Pulseaudio mode for emacs.}
-%\cvitem{\href{https://github.com/suzp1984/genesis}{\color{blue}{genesis}}}{\small 一个reactor模型的中间件，插件式设计}
-%\cvitem{C}{\small 工作中主要使用的语言, 对它也最熟悉}
-%\cvitem{java}{\small 开发android工作中主要使用的语言}
-%\cvitem{common lisp}{\small 个人兴趣主要钻研的语言, 使用的是sbcl的实现}
-%\cvitem{python}{\small 兴趣}
-%\cvitem{linux}{\small 使用的操纵系统,个人兴趣喜欢研究它, 本人对程序感兴趣就是从学习使用linux开始的}
-%\cvitem{linux kernel}{\small 略懂}
-%\cvitem{emacs}{\small 主要的开发工具}
-%\cvitem{latex}{\small 正式的文档工具}
-%\cvitem{虚拟机}{\small qemu jvm}
-%\cvitem{加密技术}{\small 个人爱好}
+\section{工作期望}
+\vspace{5mm}
+\cvitem{}{%
+  \begin{itemize}
+  \item 期望从事有挑战性的工作，并能够不断提升自己成为一个出色的工程师；
+  \item 期望能够参与初创期的项目；
+  \item 期望能跟优秀的工程师工作；
+\end{itemize}
+}
 
 \section{项目经历}
-\subsection{盒子支付钱盒项目}
-\cventry{2014.7-15.5}{安卓应用工程师}{盒子支付有限公司}{深圳}{}{%
-钱盒安卓客户端重构 \newline{}%
+\vspace{5mm}
+\subsection{视频会议项目}
+\vspace{3mm}
+\cventry{2019.1-20.3}{厦门铃盛}{移动开发部}{厦门}{}{%
+C++,Mac OS, Android Development.\newline{}%
 }
-\cvitem{项目描述:}{%
+\vspace{-2mm}
+\cvitem{描述:}{%
+\begin{itemize}
+\item 视频会议产品是用来为传统的会议室提供远程音视频的功能，它包括一个PC端(mac)和一个控制端(ipad)，其中控制端用来控制会议流程，PC端用来展示音视频和采集音视频。
+\end{itemize}
+}
+\vspace{-4mm}
+\cvitem{成绩:}{%
+\begin{itemize}
+\item 实现了ipad和PC端的直连通讯，因为一般ipad跟PC是部署在同一个内网下的，如果ipad要把控制指令发给PC就需要通过网络推送服务，这有个问题：延时会比较大。通过在PC端实现一个websocket服务器的办法，让ipad跟PC直接连接，解决了延时的问题。并通过每次PC端启动都申请一个随机端口和自签名证书的办法来保证通讯的安全。
+\item 内网服务发现方案，上面的websocket服务怎样被ipad发现呢？可以利用IOS/MAC里面的Bonjour方案，在安卓端也有对应叫做网络服务发现（network service discovery）。虽然这个办法没有被采用，我个人是比较喜欢的。
+\item Mac OS硬件信息采集，并在Mac端开发一个悬浮窗口用来实时显示硬件信息的变化，方便调试；
+\item 会议控制端在安卓平板上面的实现；
+\end{itemize}
+}
+\subsection{TTF Font icon 单元测试}
+\vspace{3mm}
+\cventry{2018.6-18.7}{厦门铃盛}{移动开发部}{厦门}{}{%
+安卓开发\newline{}%
+}
+\vspace{-2mm}
+\cvitem{描述:}{%
+\begin{itemize}
+\item 用矢量字体来替代小图标是前端常用的办法，目前公司的移动端也在使用，但矢量字体不利于维护，尤其是在多人协作的情况下，当合并代码有冲突的情况下不知道该用那个。
+\end{itemize}
+}
+\vspace{-4mm}
+\cvitem{成绩:}{%
+\begin{itemize}
+\item 通过解析矢量字体的内容，把里面每个字的绘制buffer读取出来并存下它的hash值。这样每次字体文件变化时，运行一个单元测试，会对比每一个项目中用到的字的hash值跟事先存储的hash值之间是否有变化，来确定每个字是否变化了；
+\item 用一个gradle插件可以用来重置项目中的比对hash值的存储文件; 如果JVM里面有JavaFX的话也可以用一个插件的命令来查看某个字； 
+\item 可以给设计师反馈字体文件中有哪些冗余，就是两个字有相同的内容；
+\item 可以给设计师反馈字体文件中有哪些没有用到的字；
+\end{itemize}
+}
+
+\subsection{安卓Webrtc视频客户端}
+\vspace{3mm}
+\cventry{2017.12-18.12}{厦门铃盛}{移动开发部}{厦门}{}{%
+安卓开发\newline{}%
+}
+\vspace{-2mm}
+\cvitem{描述:}{%
+\begin{itemize}
+\item 铃盛IM产品有音视频通话功能，其中视频会议采用的是Webrtc SFU架构，我主要工作在安卓客户端业务开发。
+\end{itemize}
+}
+\vspace{-4mm}
+\cvitem{成绩:}{%
+\begin{itemize}
+\item 实现了早期的界面逻辑包括Webrtc集成；
+\item 个人比较满意的工作是实现了一个可以上下拖动的布局控件，目前公司产品已经不用了，我又实现了一个类似的放在github \href{https://github.com/suzp1984/AdvancedSlidingPanel}{\color{blue}{Advanced Sliding Panel}}
+\item 基于我对webrtc sdk的了解，希望能够继续从事更加深入的工作；包括安卓端视频渲染的问题，相对是个难点，个人也想有所突破；
+\end{itemize}
+}
+\subsection{McAfee 安卓杀毒软件}
+\vspace{3mm}
+\cventry{2016.8-17.7}{英特尔 \& 迈克菲}{手机安全部}{深圳}{}{%
+安卓开发\newline{}%
+}
+\vspace{-2mm}
+\cvitem{描述:}{%
+\begin{itemize}
+\item McAfee 安卓杀毒软件是用来检查安卓手机安全隐患的应用.
+\end{itemize}
+}
+\vspace{-4mm}
+\cvitem{成绩:}{%
+\begin{itemize}
+\item 安卓界面开发，用安卓material design的原则重构页面；
+\end{itemize}
+}
+
+\subsection{盒子支付钱盒项目}
+\vspace{3mm}
+\cventry{2014.7-15.5}{盒子支付有限公司}{软件部}{深圳}{}{%
+安卓开发 \newline{}%
+}
+\vspace{-2mm}
+\cvitem{描述:}{%
 \begin{itemize}
 \item 钱盒作为盒子支付的核心业务，本质是一个移动端的POS收款机器，它由手机端的应用，后台交易系统和智能终端设备盒子组成。首先，终端盒子要通过音频口或者蓝牙的方式连接到手机端，客户通过在盒子端刷银行卡来同商户完成一笔交易。
 \item 智能盒子硬件部分可通过同手机通讯方式的不同分为音频口通讯，蓝牙通讯和UART串口通讯的方式，又根据支持的银行卡类型的不同分为磁条卡和IC卡支付。
 \end{itemize}
 }
-
-\cvitem{项目成绩:}{%
+\vspace{-4mm}
+\cvitem{成绩:}{%
 \begin{itemize}
 \item 将主要的业务对象独立到单独的安卓模块中，并能在其它的项目中重用此模块。
 \item 按照传统的软件设计流程：添加单元测试，写软件设计文档，并维护一份软件编程规范。保证软件开发可持续和可维护。
 \item 在对象的设计中比较有价值的是抽象出同硬件的通信类型的接口，使得音频和蓝牙两种通信方案相互独立，并能够在以后的项目中引入串口通讯时，可以方便的重用所有的代码。
 \item 使用JNI移植jbig图片编码技术到java平台, JBIG是一种单颜色空间的无损压缩格式，常用于能提供压力触摸笔签名的银联POS机。
+\item 因为Jbig的工作是帮助后端的项目做的，公司安卓平台没有使用，现把安卓平台的demo放到github: \href{https://github.com/suzp1984/jbig-android}{\color{blue}{Jbig-Android}}
 \end{itemize}}
 \cvitem{}{}
 
 \subsection{盒子支付架构组工作}
-\cventry{2015.7-16.3}{软件工程师}{深圳盒子支付有限公司}{深圳}{}{%
+\vspace{3mm}
+\cventry{2015.7-16.3}{盒子支付}{软件部}{深圳}{}{%
+软件工程师\newline{}%
 }
-\cvitem{项目描述:}{%
+\vspace{-2mm}
+\cvitem{描述:}{%
 \begin{itemize}
 \item Android应用架构研究
 \item Git/Gitlab 技术培训
@@ -184,7 +285,8 @@
 \item Docker以及自动配置系统方案研究
 \end{itemize}
 }
-\cvitem{项目成绩:}{%
+\vspace{-4mm}
+\cvitem{成绩:}{%
 \begin{itemize}
 \item 在公司推广了gitlab和git的使用，抛弃了以往的svn版本管理工具。
 \item android MVP/MVC 架构实践
@@ -194,28 +296,36 @@
 
 \cvitem{}{}
 \subsection{蓝牙低功耗可穿戴设备项目}
-\cventry{2013.10-14.3}{软件工程师}{深圳市鼎智时代通讯技术有限公司}{深圳}{}{%
+\vspace{3mm}
+\cventry{2013.10-14.3}{鼎智时代}{软件部}{深圳}{}{%
+安卓开发\newline{}%
 }
-\cvitem{项目描述:}{%
+\vspace{-2mm}
+\cvitem{描述:}{%
 \begin{itemize}
 \item 研究BroadCom 的BLE方案在可穿戴领域的应用
 \end{itemize}}
-\cvitem{项目成绩:}{%
+\vspace{-4mm}
+\cvitem{成绩:}{%
 \begin{itemize}
-\item Open Sourced \href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light-BLE}} project, which can be used to debug and analysis the peripheral BLE device during development.
+\item 开源了BLE在安卓端的调试工具 \href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light-BLE}}
 \end{itemize}
 }
 \cvitem{}{}
 
 \subsection{展讯安卓平台工厂自动测试工具}
-\cventry{2012.5-12.7}{软件工程师}{深圳鼎智通讯有限公司}{深圳}{}{%
+\vspace{3mm}
+\cventry{2012.5-12.7}{鼎智通讯}{软件部}{深圳}{}{%
+安卓rom开发\newline{}%
 }
-\cvitem{项目描述:}{%
+\vspace{-2mm}
+\cvitem{描述:}{%
 \begin{itemize}
 \item 展讯平台的pcb板出厂测试模块，利用安卓系统的C层的代码，将所有外设都在一个出厂夹具中自动跑一遍，然后测试结果会显示在夹具的LCD屏上。
 \end{itemize}
 }
-\cvitem{项目成绩:}{%
+\vspace{-4mm}
+\cvitem{成绩:}{%
 \begin{itemize}
 \item 方便工厂在贴片完成之后就能迅速将有问题的pcb板检查出来，提高手机的良品率。
 \end{itemize}
@@ -223,8 +333,10 @@
 \cvitem{}{}
 
 \subsection{安卓系统开发}
-\cventry{2010.5-12.8}{软件工程师}{Topwise3g \& Topwise Co., Ltd.}{深圳}{}{}
-\cvitem{项目描述:}{%
+\vspace{3mm}
+\cventry{2010.5-12.8}{鼎智时代，鼎智通讯}{软件部}{深圳}{}{安卓rom开发维护\newline{}}
+\vspace{-2mm}
+\cvitem{描述:}{%
 \begin{itemize}
 \item 从android1.6开始到4.3，在鼎智做android 方案开发，经历过Marvell, 展讯，高通，全志平台的方案。
 \item 负责makefile, HAL硬件适配层的开发。
