--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -64,9 +64,9 @@
 \maketitle
 
 \section{Educational Background}
-\cventry{2007.8-10.7}{Master}{Institute of Metal Research, Chinese Academy of Sciences}{ShenYang} {Chemical Physics} {} % {\textit{成绩}}{说明}  % 第3到第6编码可留白
+\cventry{2007.08 - 2010.07\hspace{2.0mm}}{Master}{Institute of Metal Research, Chinese Academy of Sciences}{ShenYang} {Chemical Physics} {} % {\textit{成绩}}{说明}  % 第3到第6编码可留白
 \vspace{5mm}
-\cventry{2003.8-07.7}{Bachelor}{YanTai university}{YanTai} {Applied Physics} {} % {\textit{成绩}}{说明}
+\cventry{2003.08 - 2007.07\hspace{2.0mm}}{Bachelor}{YanTai university}{YanTai} {Applied Physics} {} % {\textit{成绩}}{说明}
 
 %\section{毕业论文}
 %\cvitem{题目}{\emph{题目}}
@@ -74,7 +74,15 @@
 %\cvitem{说明}{\small 论文简介}
 
 \section{Working Experience}
-\cventry{2017.11-now}{Ringcentral Co., Ltd.}{mobile department}{XiaMen}{}{%
+\cventry{2020.11 - now\hspace{2.0mm}}{Independent developer}{}{}{}{}
+\cvitem{Interest}{%
+  \begin{itemize}
+    \item {\small \emph {OpenGL, Metal, WebGL, Vulkan}}
+  \end{itemize}
+}
+  
+\vspace{0.0mm}
+\cventry{2017.11 - 2020.10\hspace{2.0mm}}{Ringcentral Co., Ltd.}{mobile department}{XiaMen}{}{%
 }
 \cvitem{Position}{%
 \begin{itemize}
@@ -89,7 +97,7 @@
 \end{itemize}
 }
 
-\cventry{2016.8-17.11}{Intel Co., Ltd. \& Mcafee Co., Ltd.}{Mobile Security department}{ShenZhen}{}{%
+\cventry{2016.08 - 2017.11\hspace{2.0mm}}{Intel Co., Ltd. \& Mcafee Co., Ltd.}{Mobile Security department}{ShenZhen}{}{%
 }
 \cvitem{Position}{%
 \begin{itemize}
@@ -109,7 +117,7 @@
 \end{itemize}
 }
 
-\cventry{2014.4-16.4}{Iboxpay Co., Ltd.}{Software department}{ShenZhen}{}{%
+\cventry{2014.04 - 2016.04\hspace{2.0mm}}{Iboxpay Co., Ltd.}{Software department}{ShenZhen}{}{%
 }
 \cvitem{Position}{%
 \begin{itemize}
@@ -124,7 +132,7 @@
 }
 
 
-\cventry{2010.4-14.4}{Topwise Co., Ltd.}{Software department}{ShenZhen}{}{%
+\cventry{2010.04 - 2014.04\hspace{2.0mm}}{Topwise Co., Ltd.}{Software department}{ShenZhen}{}{%
 }
 \cvitem{Position}{%
 \begin{itemize}
@@ -134,10 +142,10 @@
 \vspace{-4.5mm}
 \cvitem{Department}{%
 \begin{itemize}
-\item {\small {2010.4 - 2012.1}, \small \emph {Topwise3g Co., Ltd.}}
-\item {\small {2012.2 - 2012.8}, \small \emph {Topwise Co., Ltd.}}
-\item {\small {2012.8 - 2013.8}, \emph {Free Developer}, \small {Resignation}}  
-\item {\small {2013.9 - 2014.4}, \small \emph {Topwise3g Co., Ltd.}}
+\item {\small {2010.04 - 2012.01}, \small \emph {Topwise3g Co., Ltd.}}
+\item {\small {2012.02 - 2012.08}, \small \emph {Topwise Co., Ltd.}}
+\item {\small {2012.08 - 2013.08}, \emph {Free Developer}, \small {Resignation}}  
+\item {\small {2013.09 - 2014.04}, \small \emph {Topwise3g Co., Ltd.}}
 \end{itemize}
 }
 \vspace{-4.5mm}
@@ -160,18 +168,29 @@
 \vspace{5mm}
 \cvitem{}{%
   \begin{itemize}
-  \item I look forward to taking more challenges that can push me to the fulfillment of my ambitions to be a productive engineer.
-  \item I look forward to serving a group that has the value of work-life balance.
-  \item I look forward to participating in a pioneering and growing project instead of a blank and mature one.
-  \item I look forward to working with talent engineers.
+  \item I look forward to works in GPU programming field.
+  \item I look forward to participating in a pioneering and cutting edge project.
 \end{itemize}
 }
 
 \section{Projects experience}
 \vspace{5mm}
+\subsection{Learn Metal}
+\vspace{3mm}
+\cventry{2021.02 - now\hspace{2.8mm}}{Personal Project}{}{}{}{%
+Metal  
+}
+\vspace{1mm}
+\cvitem{Description:}{%
+\begin{itemize}
+\item Learn and practise Metal API，and implement the rendering samples of \href{https://learnopengl.com/}{\color{blue}LearnOpenGL}. SouceCode: \href{https://github.com/suzp1984/LearnMetal}{\color{blue}LearnMetal}，which includes the Phong lighting model, 3D Model rendering, offscreen framebuffer rendering, Deferred Shading, PBR.
+\item fix and refactor \href{https://github.com/suzp1984/GPUImage3}{\color{blue}GPUImage3}，which is a GPU-accelerated video and image processing library using Metal.
+\end{itemize}
+}
+\vspace{5mm}
 \subsection{Video Meeting Project}
 \vspace{3mm}
-\cventry{2019.1-20.3}{Software Engineer}{Ringcentral XiaMen Co., Ltd.}{XiaMen}{}{%
+\cventry{2019.01 - 2020.03\hspace{2.0mm}}{Software Engineer}{Ringcentral XiaMen Co., Ltd.}{XiaMen}{}{%
 C++,Mac OS, Android Development.\newline{}%
 }
 \vspace{-2mm}
@@ -191,7 +210,7 @@ C++,Mac OS, Android Development.\newline{}%
 }
 \subsection{TTF Font icon Unit Test}
 \vspace{3mm}
-\cventry{2018.6-18.7}{Android App Engineer}{Ringcentral XiaMen Co., Ltd.}{XiaMen}{}{%
+\cventry{2018.06 - 2018.07\hspace{2.0mm}}{Android App Engineer}{Ringcentral XiaMen Co., Ltd.}{XiaMen}{}{%
  Android App Development.\newline{}%
 }
 \vspace{-2mm}
@@ -215,7 +234,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{RingCentral Video Project}
 \vspace{3mm}
-\cventry{2017.12-18.12}{Android App Engineer}{Ringcentral XiaMen Co., Ltd.}{XiaMen}{}{%
+\cventry{2017.12 - 2018.12\hspace{2.0mm}}{Android App Engineer}{Ringcentral XiaMen Co., Ltd.}{XiaMen}{}{%
 WebRTC Android Client Development.\newline{}%
 }
 \vspace{-2mm}
@@ -236,7 +255,7 @@ WebRTC Android Client Development.\newline{}%
 
 \subsection{Intel Security Mobile App Project}
 \vspace{3mm}
-\cventry{2016.8-17.7}{Android App Engineer}{Intel Co., Ltd. \& Mcafee China}{ShenZhen}{}{%
+\cventry{2016.08 - 2017.07\hspace{2.0mm}}{Android App Engineer}{Intel Co., Ltd. \& Mcafee China}{ShenZhen}{}{%
 Mcafee Antivirus App development.\newline{}%
 }
 \vspace{-2mm}
@@ -256,7 +275,7 @@ Mcafee Antivirus App development.\newline{}%
 
 \subsection{IBoxPay's CashBox Android App Project}
 \vspace{3mm}
-\cventry{2014.7-15.5}{Android App Engineer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
+\cventry{2014.07 - 2015.05\hspace{2.0mm}}{Android App Engineer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
 redesign and refactor the CashBox App project.\newline{}%
 }
 \vspace{-2mm}
@@ -278,7 +297,7 @@ redesign and refactor the CashBox App project.\newline{}%
 
 \subsection{Jobs at Software Architecture Team of IBoxPay}
 \vspace{3mm}
-\cventry{2015.7-16.3}{Software Developer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
+\cventry{2015.07 - 2016.03\hspace{2.0mm}}{Software Developer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
 }
 \vspace{-2mm}
 \cvitem{Description:}{%
@@ -300,7 +319,7 @@ redesign and refactor the CashBox App project.\newline{}%
 %\cvitem{}{}
 \subsection{Bluetooth Low Energy Project}
 \vspace{3mm}
-\cventry{2013.10-14.3}{Software Developer}{Topwise3g Co., Ltd.}{Shenzhen}{}{%
+\cventry{2013.10 - 2014.03\hspace{2.0mm}}{Software Developer}{Topwise3g Co., Ltd.}{Shenzhen}{}{%
 }
 \vspace{-2mm}
 \cvitem{Description:}{%
@@ -317,7 +336,7 @@ redesign and refactor the CashBox App project.\newline{}%
 
 \subsection{Factory autotest toolkit for SpreadTrum's Android platform}
 \vspace{3mm}
-\cventry{2012.5-12.7}{Software Developer}{Topwise Co., Ltd.}{Shenzhen}{}{%
+\cventry{2012.05 - 2012.07\hspace{2.0mm}}{Software Developer}{Topwise Co., Ltd.}{Shenzhen}{}{%
 }
 \vspace{-2mm}
 \cvitem{Description:}{%
@@ -335,7 +354,7 @@ redesign and refactor the CashBox App project.\newline{}%
 
 \subsection{Android Rom Development}
 \vspace{3mm}
-\cventry{2010.5-12.8}{Software Developer}{Topwise3g \& Topwise Co., Ltd.}{Shenzhen}{}{}
+\cventry{2010.05 - 2012.08\hspace{2.0mm}}{Software Developer}{Topwise3g \& Topwise Co., Ltd.}{Shenzhen}{}{}
 \vspace{-2mm}
 \cvitem{Description:}{%
 \begin{itemize}
