--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -64,8 +64,8 @@
 \maketitle
 
 \section{教育背景}
-\cventry{2007.8-10.7}{硕士}{中科院金属所}{沈阳} {物理化学硕士学位} {} % {\textit{成绩}}{说明}  % 第3到第6编码可留白
-\cventry{2003.8-07.7}{学士}{烟台大学}{烟台} {应用物理学士学位} {} % {\textit{成绩}}{说明}
+\cventry{2007.8 - 2010.7\hspace{2.8mm}}{硕士}{中科院金属所}{沈阳} {物理化学硕士学位} {} % {\textit{成绩}}{说明}  % 第3到第6编码可留白
+\cventry{2003.8 - 2007.7\hspace{2.8mm}}{学士}{烟台大学}{烟台} {应用物理学士学位} {} % {\textit{成绩}}{说明}
 
 %\section{毕业论文}
 %\cvitem{题目}{\emph{题目}}
@@ -74,8 +74,8 @@
 
 \section{工作背景}
 % \subsection{专业}
-\cventry{2020.11-now}{待业}{}{}{}{}
-\cventry{2017.11-20.10}{厦门铃盛软件}{移动开发部}{厦门}{}{%
+\cventry{2020.11 - now\hspace{2.8mm}}{待业}{}{}{}{}
+\cventry{2017.11 - 2020.10\hspace{2.8mm}}{厦门铃盛软件}{移动开发部}{厦门}{}{%
 }
 \cvitem{职位}{%
 \begin{itemize}
@@ -90,7 +90,7 @@
 \end{itemize}
 }
 
-\cventry{2016.8-17.11}{英特尔(Intel) \& 迈克菲(McAfee)}{手机安全部}{深圳}{}{%
+\cventry{2016.08 - 2017.11\hspace{2.8mm}}{英特尔(Intel) \& 迈克菲(McAfee)}{手机安全部}{深圳}{}{%
 }
 \cvitem{职位}{%
 \begin{itemize}
@@ -110,7 +110,7 @@
 \end{itemize}
 }
 
-\cventry{2014.4-16.4}{深圳盒子支付}{研发部}{深圳}{}{%
+\cventry{2014.04 - 2016.04\hspace{2.8mm}}{深圳盒子支付}{研发部}{深圳}{}{%
 }
 \cvitem{职位}{%
 \begin{itemize}
@@ -126,7 +126,7 @@
 }
 
 
-\cventry{2010.4-14.4}{深圳鼎智通讯技术有限公司}{智能手机部门}{深圳}{}{%
+\cventry{2010.04 - 2014.04\hspace{2.8mm}}{深圳鼎智通讯技术有限公司}{智能手机部门}{深圳}{}{%
 }
 \cvitem{职位}{%
 \begin{itemize}
@@ -136,10 +136,10 @@
 \vspace{-4.5mm}
 \cvitem{部门}{%
 \begin{itemize}
-\item {\small {2010.4 - 2012.1}, \small \emph {深圳鼎智时代}}
-\item {\small {2012.2 - 2012.8}, \small \emph {深圳鼎智通讯}}
-\item {\small {2012.8 - 2013.8}, \emph {离职}}  
-\item {\small {2013.9 - 2014.4}, \small \emph {深圳鼎智时代}}
+\item {\small {2010.04 - 2012.01}, \small \emph {深圳鼎智时代}}
+\item {\small {2012.02 - 2012.08}, \small \emph {深圳鼎智通讯}}
+\item {\small {2012.08 - 2013.08}, \emph {离职}}  
+\item {\small {2013.09 - 2014.04}, \small \emph {深圳鼎智时代}}
 \end{itemize}
 }
 \vspace{-4.5mm}
@@ -172,20 +172,20 @@
 \vspace{5mm}
 \subsection{Apple Metal 开发}
 \vspace{3mm}
-\cventry{2021.2-now}{个人项目}{}{}{}{%
+\cventry{2021.02 - now\hspace{2.8mm}}{个人项目}{}{}{}{%
 Metal  
 }
-\vspace{-2mm}
+\vspace{1mm}
 \cvitem{描述:}{%
 \begin{itemize}
 \item 学习Metal API，并实现\href{https://learnopengl.com/}{\color{blue}LearnOpenGL}中的渲染示例。项目地址：\href{https://github.com/suzp1984/LearnMetal}{\color{blue}LearnMetal}，用Metal实现了：Phong光照模型，3D Model加载，离线渲染，Deferred Shading, PBR等渲染技术。
-\item 修复和重构\href{https://github.com/suzp1984/GPUImage3}{\color{blue}GPUImage3}，\href{https://github.com/BradLarson/GPUImage3}{\color{blue}GPUimage3}是用Metal实现的ios/Mac平台的视频和图片效果处理库。 
+\item 修复和重构\href{https://github.com/suzp1984/GPUImage3}{\color{blue}GPUImage3}，\href{https://github.com/BradLarson/GPUImage3}{\color{blue}GPUImage3}是用Metal实现的ios/Mac平台的视频和图片效果处理库。 
 \end{itemize}
 }
 \vspace{5mm}
 \subsection{视频会议项目}
 \vspace{3mm}
-\cventry{2019.1-20.3}{厦门铃盛}{移动开发部}{厦门}{}{%
+\cventry{2019.01 - 2020.03\hspace{2.8mm}}{厦门铃盛}{移动开发部}{厦门}{}{%
 C++,Mac OS, Android Development.\newline{}%
 }
 \vspace{-2mm}
@@ -205,7 +205,7 @@ C++,Mac OS, Android Development.\newline{}%
 }
 \subsection{TTF Font icon 单元测试}
 \vspace{3mm}
-\cventry{2018.6-18.7}{厦门铃盛}{移动开发部}{厦门}{}{%
+\cventry{2018.06 - 2018.07\hspace{2.8mm}}{厦门铃盛}{移动开发部}{厦门}{}{%
 安卓开发\newline{}%
 }
 \vspace{-2mm}
@@ -226,7 +226,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{安卓Webrtc视频客户端}
 \vspace{3mm}
-\cventry{2017.12-18.12}{厦门铃盛}{移动开发部}{厦门}{}{%
+\cventry{2017.12 - 2018.12\hspace{2.8mm}}{厦门铃盛}{移动开发部}{厦门}{}{%
 安卓开发\newline{}%
 }
 \vspace{-2mm}
@@ -245,7 +245,7 @@ C++,Mac OS, Android Development.\newline{}%
 }
 \subsection{McAfee 安卓杀毒软件}
 \vspace{3mm}
-\cventry{2016.8-17.7}{英特尔 \& 迈克菲}{手机安全部}{深圳}{}{%
+\cventry{2016.08 - 2017.07\hspace{2.8mm}}{英特尔 \& 迈克菲}{手机安全部}{深圳}{}{%
 安卓开发\newline{}%
 }
 \vspace{-2mm}
@@ -263,7 +263,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{盒子支付钱盒项目}
 \vspace{3mm}
-\cventry{2014.7-15.5}{盒子支付有限公司}{软件部}{深圳}{}{%
+\cventry{2014.07 - 2015.05\hspace{2.8mm}}{盒子支付有限公司}{软件部}{深圳}{}{%
 安卓开发 \newline{}%
 }
 \vspace{-2mm}
@@ -286,7 +286,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{盒子支付架构组工作}
 \vspace{3mm}
-\cventry{2015.7-16.3}{盒子支付}{软件部}{深圳}{}{%
+\cventry{2015.07 - 2016.03\hspace{2.8mm}}{盒子支付}{软件部}{深圳}{}{%
 软件工程师\newline{}%
 }
 \vspace{-2mm}
@@ -311,7 +311,7 @@ C++,Mac OS, Android Development.\newline{}%
 \cvitem{}{}
 \subsection{蓝牙低功耗可穿戴设备项目}
 \vspace{3mm}
-\cventry{2013.10-14.3}{鼎智时代}{软件部}{深圳}{}{%
+\cventry{2013.10 - 2014.03\hspace{2.8mm}}{鼎智时代}{软件部}{深圳}{}{%
 安卓开发\newline{}%
 }
 \vspace{-2mm}
@@ -329,7 +329,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{展讯安卓平台工厂自动测试工具}
 \vspace{3mm}
-\cventry{2012.5-12.7}{鼎智通讯}{软件部}{深圳}{}{%
+\cventry{2012.05 - 2012.07\hspace{2.8mm}}{鼎智通讯}{软件部}{深圳}{}{%
 安卓rom开发\newline{}%
 }
 \vspace{-2mm}
@@ -348,7 +348,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{安卓系统开发}
 \vspace{3mm}
-\cventry{2010.5-12.8}{鼎智时代，鼎智通讯}{软件部}{深圳}{}{安卓rom开发维护\newline{}}
+\cventry{2010.05 - 2012.08\hspace{2.8mm}}{鼎智时代，鼎智通讯}{软件部}{深圳}{}{安卓rom开发维护\newline{}}
 \vspace{-2mm}
 \cvitem{描述:}{%
 \begin{itemize}
