--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -178,7 +178,7 @@ Metal
 \vspace{1mm}
 \cvitem{描述:}{%
 \begin{itemize}
-\item 学习Metal API，并实现\href{https://learnopengl.com/}{\color{blue}LearnOpenGL}中的渲染示例。项目地址：\href{https://github.com/suzp1984/LearnMetal}{\color{blue}LearnMetal}，用Metal实现了：Phong光照模型，3D Model加载，离线渲染，Deferred Shading, PBR等渲染技术。
+\item 学习Metal API，并实现\href{https://learnopengl.com/}{\color{blue}LearnOpenGL}中的渲染示例。项目地址：\href{https://github.com/suzp1984/LearnMetal}{\color{blue}LearnMetal}，用Metal实现了：Phong光照模型，3D Model加载，离线渲染，Deferred Shading，PBR等渲染技术。
 \item 修复和重构\href{https://github.com/suzp1984/GPUImage3}{\color{blue}GPUImage3}，\href{https://github.com/BradLarson/GPUImage3}{\color{blue}GPUImage3}是用Metal实现的ios/Mac平台的视频和图片效果处理库。 
 \end{itemize}
 }
