--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -39,7 +39,7 @@
 \familyname{Su}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~***********}                         % 可选项、如不需要可删除本行
+\mobile{+86~18665875205}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -74,7 +74,32 @@
 %\cvitem{说明}{\small 论文简介}
 
 \section{Working Experience}
-\cventry{2020.11 - now\hspace{2.0mm}}{Independent developer}{}{}{}{}
+
+\cventry{2021.07 - now\hspace{2.0mm}}{Etteplan Beijing}{ABB outsource}{Beijing}{}{%
+}
+\cvitem{Position}{%
+\begin{itemize}
+\item {\small \emph {Mobile app engineer}}
+\end{itemize}
+}
+\vspace{-4.5mm}
+\cvitem{Responsibily}{%
+\begin{itemize}
+\item {\small \emph {ABB's Drivetune Mobile App dev including Android \& iOS}}
+\item {\small \emph {JS modules embeded inside ABB's Drivetuen App}}
+\item {\small \emph {Azure DevOps Pipeline maintain \& dev}}
+\end{itemize}
+}
+\vspace{0.0mm}
+\cventry{2021.06 - 2021.07\hspace{2.0mm}}{LIEPT}{}{ZiBo, ShanDong}{}{}
+\cvitem{Position}{%
+  \begin{itemize}
+    \item {\small \emph {Mobile app engineer}}
+  \end{itemize}
+}
+
+\vspace{0.0mm}
+\cventry{2020.11 - 2021.07\hspace{2.0mm}}{Independent developer}{}{}{}{}
 \cvitem{Interest}{%
   \begin{itemize}
     \item {\small \emph {OpenGL, Metal, WebGL, Vulkan}}
@@ -157,17 +182,19 @@
 }
 
 \section{Programming Skills}
+\cvitem{Azure}{\small \href{https://www.credly.com/badges/994162df-3872-424d-9d6f-de9aa7cd1d8e/public_url}{\color{blue}{Azure Administrator Associate credly badges}}}
+\cvitem{AWS}{\small \href{https://www.credly.com/badges/5daf7d14-4063-4c4e-abb2-60abf358067a/public_url}{\color{blue}{AWS Certified Solutions Architect - Associate credly badges}}}
+\cvitem{Android NDK}{\small \href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig android}}}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
-\cvitem{blog}{\small \href{https://medium.com/@zpcat}{\color{blue}{https://medium.com/@zpcat}}}
-\cvitem{Languages}{\small Kotlin, Java, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
+\cvitem{Languages}{\small Kotlin, Java, Rust, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
 \cvitem{OS} {Android, Linux, Mac OS X}
-\cvitem{Github} {\small \href{https://medium.com/@zpcat}{\color{blue}{https://medium.com/@zpcat}}}
 \cvitem{Editor}{Emacs, Android Studio, VS Code}
 
 \section{Job Expectation \& Self Evaluation}
 \vspace{5mm}
 \cvitem{}{%
   \begin{itemize}
+  \item I look forward to works in Rust, C/C++ as main programming language.
   \item I look forward to works in GPU programming field.
   \item I look forward to participating in a pioneering and cutting edge project.
 \end{itemize}
@@ -175,9 +202,24 @@
 
 \section{Projects experience}
 \vspace{5mm}
+\subsection{ABB Drivetune}
+\vspace{3mm}
+\cventry{2021.08 - now\hspace{2.8mm}}{ABB Drivetune App}{}{}{}{%
+}
+\vspace{1mm}
+\cvitem{Description:}{%
+\begin{itemize}
+\item Android, iOS, hybrid dev.
+\item Android NDK, iOS C++.
+\item Vue.
+\item Javascript, TypeScript.
+\item Azure DevOps.
+\end{itemize}
+}
+\vspace{5mm}
 \subsection{Learn Metal}
 \vspace{3mm}
-\cventry{2021.02 - now\hspace{2.8mm}}{Personal Project}{}{}{}{%
+\cventry{2021.02 - 2021.06\hspace{2.8mm}}{Personal Project}{}{}{}{%
 Metal  
 }
 \vspace{1mm}
