--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -39,7 +39,7 @@
 \familyname{振兴}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~***********}                         % 可选项、如不需要可删除本行
+\mobile{+86~18665875205}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -74,7 +74,36 @@
 
 \section{工作背景}
 % \subsection{专业}
-\cventry{2020.11 - now\hspace{2.8mm}}{待业}{}{}{}{}
+\cventry{2021.07 - now\hspace{2.0mm}}{Etteplan Beijing}{ABB 外包}{北京}{}{%
+}
+\cvitem{职位}{%
+\begin{itemize}
+\item {\small \emph {移动开发工程师}}
+\end{itemize}
+}
+\vspace{-4.5mm}
+\cvitem{职责}{%
+\begin{itemize}
+\item {\small \emph {ABB Drivetune 移动App开发}}
+\item {\small \emph {ABB Drivetuen 移动端混合模块开发，Vue2, TypeScript, javascript}}
+\item {\small \emph {Azure DevOps Pipeline 开发维护}}
+\end{itemize}
+}
+\vspace{0.0mm}
+\cventry{2021.06 - 2021.07\hspace{2.0mm}}{山东隆之智环保科技有限公司}{}{淄博, 山东}{}{}
+\cvitem{职位}{%
+  \begin{itemize}
+    \item {\small \emph {移动开发工程师}}
+  \end{itemize}
+}
+
+\vspace{0.0mm}
+\cventry{2020.11 - 2021.07\hspace{2.0mm}}{独立开发者}{}{}{}{}
+\cvitem{Interest}{%
+  \begin{itemize}
+    \item {\small \emph {OpenGL, Metal, WebGL, Vulkan}}
+  \end{itemize}
+}
 \cventry{2017.11 - 2020.10\hspace{2.8mm}}{厦门铃盛软件}{移动开发部}{厦门}{}{%
 }
 \cvitem{职位}{%
@@ -152,9 +181,10 @@
 
 
 \section{软件技能}
+\cvitem{Azure}{\small \href{https://www.credly.com/badges/994162df-3872-424d-9d6f-de9aa7cd1d8e/public_url}{\color{blue}{Azure Administrator Associate credly badges}}}
+\cvitem{AWS}{\small \href{https://www.credly.com/badges/5daf7d14-4063-4c4e-abb2-60abf358067a/public_url}{\color{blue}{AWS Certified Solutions Architect - Associate credly badges}}}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
-\cvitem{blog}{\small \href{https://medium.com/@zpcat}{\color{blue}{https://medium.com/@zpcat}}}
-\cvitem{Languages}{\small Kotlin, Java, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
+\cvitem{Languages}{\small Kotlin, Java, Rust, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
 \cvitem{OS} {Android, Linux, Mac OS X}
 \cvitem{Editor}{Emacs, Android Studio, VS Code}
 
@@ -170,9 +200,24 @@
 
 \section{项目经历}
 \vspace{5mm}
+\subsection{ABB Drivetune}
+\vspace{3mm}
+\cventry{2021.08 - now\hspace{2.8mm}}{ABB Drivetune App}{}{}{}{%
+}
+\vspace{1mm}
+\cvitem{Description:}{%
+\begin{itemize}
+\item Android, iOS, hybrid dev.
+\item Android NDK, iOS C++.
+\item Vue.
+\item Javascript, TypeScript.
+\item Azure DevOps.
+\end{itemize}
+}
+\vspace{5mm}
 \subsection{Apple Metal 开发}
 \vspace{3mm}
-\cventry{2021.02 - now\hspace{2.8mm}}{个人项目}{}{}{}{%
+\cventry{2021.02 - 2021.06\hspace{2.8mm}}{个人项目}{}{}{}{%
 Metal  
 }
 \vspace{1mm}
