update mycv en/zh

--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -39,7 +39,7 @@
 \familyname{Su}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~18665875205}                         % 可选项、如不需要可删除本行
+\mobile{+86~xxxxxxxxxxx}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -72,6 +72,20 @@
 %\cvitem{题目}{\emph{题目}}
 %\cvitem{导师}{导师}
 %\cvitem{说明}{\small 论文简介}
+
+\section{Programming Skills}
+\cvitem{Azure}{\small \href{https://www.credly.com/badges/994162df-3872-424d-9d6f-de9aa7cd1d8e/public_url}{\color{blue}{Azure Administrator Associate credly badges}}}
+\cvitem{AWS}{\small \href{https://www.credly.com/badges/5daf7d14-4063-4c4e-abb2-60abf358067a/public_url}{\color{blue}{AWS Certified Solutions Architect - Associate credly badges}}}
+\cvitem{Linux}{Using Linux from OpenSUSE(check my Avatar), then Ubuntu, Fedora.}
+\cvitem{Java}{8+ Years Android App \& System Programming experience.}
+\cvitem{.net core}{Limited experience with .net core and azure app service.}
+\cvitem{SQL}{SQLite in mobile and MySQL}
+\cvitem{Vue2}{Familiar with Vue2 and mobile side hybrid dev.}
+\cvitem{Android NDK}{\small \href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig android}}}
+\cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
+\cvitem{Languages}{\small Kotlin, Java, Rust, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
+\cvitem{OS} {Android, Linux, Mac OS X}
+\cvitem{Editor}{Emacs, Android Studio, VS Code}
 
 \section{Working Experience}
 
@@ -180,15 +194,6 @@
 \item {\small \emph {Marvell, Spreadtrum, Qualcomm, Allwinner Android platform Development}}
 \end{itemize}
 }
-
-\section{Programming Skills}
-\cvitem{Azure}{\small \href{https://www.credly.com/badges/994162df-3872-424d-9d6f-de9aa7cd1d8e/public_url}{\color{blue}{Azure Administrator Associate credly badges}}}
-\cvitem{AWS}{\small \href{https://www.credly.com/badges/5daf7d14-4063-4c4e-abb2-60abf358067a/public_url}{\color{blue}{AWS Certified Solutions Architect - Associate credly badges}}}
-\cvitem{Android NDK}{\small \href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig android}}}
-\cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
-\cvitem{Languages}{\small Kotlin, Java, Rust, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
-\cvitem{OS} {Android, Linux, Mac OS X}
-\cvitem{Editor}{Emacs, Android Studio, VS Code}
 
 \section{Job Expectation \& Self Evaluation}
 \vspace{5mm}
