--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -39,7 +39,7 @@
 \familyname{振兴}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~18665875205}                         % 可选项、如不需要可删除本行
+\mobile{+86~xxxxxxxxxxx}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -71,6 +71,19 @@
 %\cvitem{题目}{\emph{题目}}
 %\cvitem{导师}{导师}
 %\cvitem{说明}{\small 论文简介}
+
+\section{软件技能}
+\cvitem{Azure}{\small \href{https://www.credly.com/badges/994162df-3872-424d-9d6f-de9aa7cd1d8e/public_url}{\color{blue}{Azure Administrator Associate credly badges}}}
+\cvitem{AWS}{\small \href{https://www.credly.com/badges/5daf7d14-4063-4c4e-abb2-60abf358067a/public_url}{\color{blue}{AWS Certified Solutions Architect - Associate credly badges}}}
+\cvitem{Linux}{Using Linux from OpenSUSE(check my Avatar), then Ubuntu, Fedora.}
+\cvitem{Java}{8+ Years Android App \& System Programming experience.}
+\cvitem{.net core}{Limited experience with .net core and azure app service.}
+\cvitem{SQL}{SQLite in mobile and MySQL}
+\cvitem{Vue2}{Familiar with Vue2 and mobile side hybrid dev.}
+\cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
+\cvitem{Languages}{\small Kotlin, Java, Rust, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
+\cvitem{OS} {Android, Linux, Mac OS X}
+\cvitem{Editor}{Emacs, Android Studio, VS Code}
 
 \section{工作背景}
 % \subsection{专业}
@@ -178,15 +191,6 @@
 \item {\small \emph {Marvell, 展讯, 高通, 全志平台开发维护}}
 \end{itemize}
 }
-
-
-\section{软件技能}
-\cvitem{Azure}{\small \href{https://www.credly.com/badges/994162df-3872-424d-9d6f-de9aa7cd1d8e/public_url}{\color{blue}{Azure Administrator Associate credly badges}}}
-\cvitem{AWS}{\small \href{https://www.credly.com/badges/5daf7d14-4063-4c4e-abb2-60abf358067a/public_url}{\color{blue}{AWS Certified Solutions Architect - Associate credly badges}}}
-\cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
-\cvitem{Languages}{\small Kotlin, Java, Rust, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
-\cvitem{OS} {Android, Linux, Mac OS X}
-\cvitem{Editor}{Emacs, Android Studio, VS Code}
 
 \section{工作期望}
 \vspace{5mm}
